@@ -1,5 +1,5 @@
 #
-__version__ = '1.7.2'
+__version__ = '1.8.0.dev1'
 
 class exception:
     class Error(Exception):
